  <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:columnCount="4"
      android:orientation="horizontal"
    android:layout_gravity="center">

    <Spinner
      android:id="@+id/hostsDropdown"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:layout_columnSpan="2"
      android:layout_gravity="fill"
      />
    <Button
      android:id="@+id/scanButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp"
      android:text="@string/scanButton"
      android:layout_columnSpan="2"
      android:layout_gravity="fill"
      />
    <Switch
      android:id="@+id/typingMode"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/typingMode"
      android:textAlignment="center"
      android:textColorHint="#000000"
      android:layout_columnSpan="4"
      android:layout_gravity="fill"/>

      <Button
          android:id="@+id/send"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="10dp"
          android:text="@string/sendHi"
          android:layout_columnSpan="2"
          android:layout_gravity="fill"
          />

      <ImageButton
          android:id="@+id/btnSpeak"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="10dp"
          android:contentDescription="@string/speak"
          android:src="@android:drawable/ic_btn_speak_now"
          android:layout_columnSpan="2"
          android:layout_gravity="fill"
          />
    <Button
      android:id="@+id/copyButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/copy"
      android:layout_columnSpan="4"
      android:layout_gravity="fill"
      />

      <Button android:id="@+id/next" android:text="Tab"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/closeTab" android:text="Xtb"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/activeWindows" android:text="AWn"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/newTab" android:text="+Tab"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/previousTab" android:text="PTab"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/nextTab" android:text="NTab"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/pageUp" android:text="PU"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/back" android:text="Bk"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/forward" android:text="FWD"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/up" android:text="UP"
        android:layout_margin="7dp"
        />

      <Button android:id="@+id/pageDown" android:text="PD"
        android:layout_margin="7dp"
        />

      <!-- <Button
          android:layout_gravity="fill"
          android:layout_rowSpan="3"
          android:text="+" />

      <Button
          android:layout_columnSpan="2"
          android:layout_gravity="fill"
          android:text="0" />
  -->
      <Button android:id="@+id/reload" android:text="rld"
        android:layout_margin="7dp"
        />
  <!--
      <Button
          android:layout_columnSpan="3"
          android:layout_gravity="fill"
          android:text="=" />
  -->
        <Button android:id="@+id/left" android:text="lft"
          android:layout_margin="7dp"
          />
        <Button android:id="@+id/down" android:text="dwn"
          android:layout_margin="7dp"
          />
        <Button android:id="@+id/right" android:text="rgt"
          android:layout_margin="7dp"
          />
        <Button android:id="@+id/options" android:text="opt"
          android:layout_margin="7dp"
          />
        <Button android:id="@+id/open" android:text="Enter"
             android:layout_columnSpan="2"
            android:layout_gravity="fill"
          android:layout_margin="7dp"

          />
          <Button android:id="@+id/stop" android:text="Space"
             android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="7dp"

            />


      <ProgressBar
        android:id="@+id/progressBar"
        android:layout_column="1"
        android:layout_row="4"
        android:progressBackgroundTintMode="src_atop"
        android:progressBackgroundTint="@android:color/holo_blue_dark"
        android:animateLayoutChanges="true"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:visibility="gone"
        android:alpha="1"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        />

  </GridLayout>
